Add refactor intention

--- a/src/main/resources/inspectionDescriptions/LiteralArguments.html
+++ b/src/main/resources/inspectionDescriptions/LiteralArguments.html
@@ -5,7 +5,7 @@
 <p> For example the following code: </p>
 <pre><code>fetchCustomer(customerId, true)</code></pre>
 
-Can be transformed into this:
+Can be transformed into:
 <pre><code>fetchCustomer(customerId, /* validate= */ true)}</code></pre>
 <!-- tooltip end -->
 <p>Configure generated comment format.</p>
