--- a/src/main/resources/intentionDescriptions/OptionalRefactor/description.html
+++ b/src/main/resources/intentionDescriptions/OptionalRefactor/description.html
@@ -2,6 +2,6 @@
 <body>
 <p>Prefixes a method call argument with an inline comment which includes the parameter name</p>
 <!-- tooltip end -->
-<!--<p>Text after this comment will only be shown in the settings of the inspection.</p>-->
+<p>Blacklist method patterns</p>
 </body>
 </html>
